--- a/css/style.css
+++ b/css/style.css
@@ -650,17 +650,33 @@ body.light .switch-wrap p span:nth-child(1):before {
     opacity: 0.6;
     cursor: pointer;
     transition: 0.3s;
+    margin-bottom: 20px;
 }
 #ip:hover {
     opacity: 1;
 }
 
-/* 100% Image Width on Smaller Screens */
 /* @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
     }
 } */
+
+/* Contact */
+.single-contact{
+    position: static;
+    /* border: 1px solid black; */
+    width: 100%;
+    padding: 30px;
+    /* margin-top: 10px; */
+    margin-bottom: 20px; 
+    /* background: white; */
+    box-shadow: -1px 1px 16px -1px rgba(0, 0, 0, 0.75)
+    }
+
+
+/* 100% Image Width on Smaller Screens */
+
 
 .card{
     opacity: 0.6;
